Fix author bio appearing too small

--- a/styles/index.css
+++ b/styles/index.css
@@ -141,6 +141,7 @@ blockquote {
 
 .bio {
     padding: 25px;
+    font-size: 200%
 }
 
 .author img {
